--- a/project.html
+++ b/project.html
@@ -3,55 +3,45 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--- PAGE HEADER TITLE DISPLAYED--------------------------------------------->
+<!--- PAGE HEADER TITLE DISPLAYED--------------------------------------------->
   <title>Emily Heyrman's Journey</title>
-  <!--- FONT ------------------------------------------------------------------->
-  <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,900'
+<!--- FONT ----------------------------------------------------------------->
+  <link href='//fonts.googleapis.com/css?family=Montserrat:regular,thin,900'
     rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Source Sans Pro:thin,extra-light,light,100,900'
+  <link href='//fonts.googleapis.com/css?family=SourceSansPro:regular,thin,900'
     rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Raleway:thin,extra-light,light,100,900'
+  <link href='//fonts.googleapis.com/css?family=Raleway:regular,thin,900'
     rel='stylesheet' type='text/css'>
-    <!-- Font Awesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Custom Styles -->
-      <link rel="stylesheet" href="styles/reset.css">
-      <link rel="stylesheet" href="styles/main.css">
-      <!--- BODY START --------------------------------------------------------->
-        <body>
-<!--- GRID CONTAINER ----------------------------------------------------------->
-           <div class="container-SaveSafe">
-<!--MOBILE HEADER START--------------------------------------------------------->
-             <header class="header">
-               <input class="menu-btn" type="checkbox" id="menu-btn" />
-               <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-             </label>
-               <ul class="menu">
-                 <li><a href='index.html'>Home</a></li>
-                 <li><a href='images/Résumé.png'>Résumé</a></li>
-                 <li><a href='#Contact'>Contact</a></li>
-               </ul>
-             </header>
-<!---DESKTOP HEADER START------------------------------------------------------->
-            <div>
-             <header class="header">
-               <input class="menu-btn" type="checkbox" id="menu-btn" />
-                <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-                  <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
+<!-- FONT AWESOME ------------------------------------------------------------->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- CUSTOM STYLE ------------------------------------------------------------->
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/main.css">
+<!--- BODY START -------------------------------------------------------------->
+    <body>
+<!--- GRID CONTAINER ---------------------------------------------------------->
+      <div class="container-SaveSafe">
+<!---DESKTOP/MOBILE HEADER START----------------------------------------------->
+        <div>
+          <header class="header">
+            <input class="menu-btn" type="checkbox" id="menu-btn"/>
+              <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+               <img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"/>
+                <ul class="menu">
+                  <li><a href='index.html'>Home</a></li>
+                  <li><a href='images/resume'>Resume</a></li>
+                  <li><a href='#Contact'>Contact</a></li>
+                </ul>
               </header>
             </div>
-<!--- HERO SECTION ------------------------------------------------------------->
-  <div class="hero-SaveSafe">
+<!--- HERO SECTION ------------------------------------------------------------>
+    <div class="hero-SaveSafe">
       <h1>Save Safe Case Study</h1>
         <h2>Cloud storage app for the everyday saver.</h2>
         <a class="SaveSafe-Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
-      <img class="hero-image" src="images/CaseStudyHeroPhoto.jpg" alt="Case Study Hero Photo"/>
-  </div>
-  <!-- Overview Section -->
+      <img class="hero-image" src="images/casestudyherophoto.jpg" alt="Case Study Hero Photo"/>
+    </div>
+<!-- OVERVIEW SECTION --------------------------------------------------------->
   <section class="Overview">
       <h1>Overview</h1>
         <ul>
@@ -65,7 +55,7 @@
           <li class="skills-info">Survey Design, Competitive Analysis, User Stories & Flows, Creating Personas, Conducting User Interviews & Observations, Sketching, Wireframing, Prototyping, User Testing & Analysis</li>
        </ul>
   </section>
-  <!-- Problem Section -->
+<!-- PROBLEM SECTION ---------------------------------------------------------->
   <section class="Problem">
     <h1>Problem</h1>
       <h3 class="top-line-problem">There was multiple items needed to be solved for this project.</h3>
@@ -81,67 +71,66 @@
        </ul>
         <h3 class="bottom-line-problem">This is all problems that needed to be solved for this project. </h3>
   </section>
-<!-- Solution Section -->
+<!-- SOLUTION SECTION --------------------------------------------------------->
 <section class="Solution">
    <h1>Solution</h1>
      <p>A easy to use cloud storage survice called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
 </section>
-<!-- Process Section -->
+<!-- PROCESS SECTION ---------------------------------------------------------->
 <section class="Process-Section">
   <h1>Process</h1>
      <p> The cloud storage service is growing and the client seen a opening that allowed users to save everything in one location, but needed help laying and designing this application. This is where I came in, I used the following tools to develop what was needed for Save Safe.</p>
- <ul class="Process-List">
+  <ul class="Process-List">
     <li class="process-1">User Surveys</li>
-      <li class="process-2">SWOT Analysis </li>
-      <li class="process-1">User Personas </li>
-      <li class="process-4">User Stories </li>
-      <li class="process-1">User Flows</li>
-      <li class="process-6">Wireframes </li>
-      <li class="process-1">Analysis of Testing </li>
-      <li class="process-8">Mockups </li>
-      <li class="process-1">Branding Work </li>
-      <li class="process-10">Typface </li>
-      <li class="process-1">Prototype</li>
+    <li class="process-2">SWOT Analysis </li>
+    <li class="process-1">User Personas </li>
+    <li class="process-4">User Stories </li>
+    <li class="process-1">User Flows</li>
+    <li class="process-6">Wireframes </li>
+    <li class="process-1">Analysis of Testing </li>
+    <li class="process-8">Mockups </li>
+    <li class="process-1">Branding Work </li>
+    <li class="process-10">Typface </li>
+    <li class="process-1">Prototype</li>
   </ul>
 </section>
-<!-- User Surveys Section -->
+<!-- USER SURVEY SECTION ------------------------------------------------------>
 <section class="User-Surveys-Section">
   <h1>User Surveys</h1>
      <p>I conducted user surveys to help more understand what the users want in a cloud storage application. During this test it gave me inside on if this application will be used for desktop or desktop and mobile. It also helped me find what our target audience will be for this application. I asked the users about collaboration and what every user is looking for in there cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
 </section>
-<!-- SWOT Analysis Section -->
+<!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
      <p>I did a comptitive analysis on Google Drive, Dropbox and Pinterest. I learned what works and what doesnt work for the users. Doing these analysis allow me be better uderstand what the users need for Save Safe.</p>
 </section>
-<!-- Persona Section -->
+<!-- PERSONA SECTION ---------------------------------------------------------->
 <section class="Personas-Section">
   <h1>Personas</h1>
      <p>User Personas showed me about what type of users will want to use this application. It allowed me to see the age difference and goals of each user and how each user may not use the application the same way. </p>
-     <img class="Persona-Image-Section" src="images/PersonaSectionPhoto.jpg" alt="Persona Section Photo"/>
-  <img class="joe-persona-images" src="images/Personas.jpg" alt="Personas"/>
+  <img class="Persona-Image-Section" src="images/personasectionphoto.jpg" alt="Persona Section Photo"/>
+  <img class="joe-persona-images" src="images/personas.jpg" alt="Personas"/>
 </section>
-<!-- User Stories Section-->
+<!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
      <p>When creating the user stories for this application I wanted to display the main functions a user may do during the presents on this application. This gives me the ability to see what needs to be done on the application and what is the main goals for the users. This gives me a easier way to break down what pages are needed to develop this cloud storage service.</p>
 </section>
-<!-- User Flows Section -->
+<!-- USER FLOWS SECTION ------------------------------------------------------->
 <section class="User-Flows-Section">
   <h1>User Flows</h1>
      <p>I designed user flows after the following tests and research to figure out what would be the best and easiest way to complete high priority tasks for the user. This allows me to make changes easier before designing and layout every page needed.</p>
-    <img class="UserFlow-Sketches-Images" src="images/UserFlowsSketches.jpg" alt="User Flow Sketches"/>
-  <img class="UserFlow-Digital-Images" src="images/UserFlowsDigital.jpg" alt="User Flow Digital"/>
+    <img class="UserFlow-Images" src="images/user-flows.png" alt="User Flow Sketches"/>
+
 </section>
-<!-- Wireframes Section -->
+<!-- WIREFRAME SECTION -------------------------------------------------------->
 <section class="Wireframes-Section">
   <h1>Wireframes</h1>
      <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without pudding a lot of effort into the design process of this application. </p>
-     <img class="Wireframe-image" src="images/WireframesImage.jpg" alt="Wireframe Section Image"/>
-   <img class="Wireframe-Sketches-Images" src="images/WireframeDrawings.jpg" alt="Wireframe Drawings"/>
-  <img class="Wireframe-Digital-Images" src="images/WireframeDigital.jpg" alt="Wireframe Digital"/>
+     <img class="Wireframe-image" src="images/wireframesimage.jpg" alt="Wireframe Section Image"/>
+   <img class="Wireframe-Images" src="images/wireframes.png" alt="Wireframe Drawings"/>
 </section>
-<!-- Analysis of Test Section -->
+<!-- ANALYSIS OF TEST SECTION ------------------------------------------------->
 <section class="Analysis-of-Test-Section">
   <h1>Analysis of Test</h1>
     <ul>
@@ -153,23 +142,22 @@
       <li class="test-3-info">During this usability test I learned that I could work on the name of the buttons. For they where confusing for this tester. </li>
    </ul>
 </section>
-<!-- Mockup Section -->
+<!-- MOCKUP SECTION ----------------------------------------------------------->
 <section class="Mockup-Section">
   <h1>Mockups</h1>
      <p>My First Mockups some of my colors used in the application didn’t  work well together for every user. I tested the new colors against each other to make sure they work well for each user and they did. </p>
-     <img class="Mockup-Image" src="images/MockupsPhoto.jpg" alt="Mockup Photo Section"/>
-   <img class="Mockup-Image-Digital" src="images/Mockups.jpg" alt="Mockups Photo"/>
+     <img class="Mockup-Image" src="images/mockupsphoto.jpg" alt="Mockup Photo Section"/>
+   <img class="Mockup-Image-Digital" src="images/mockups.jpg" alt="Mockups Photo"/>
 </section>
-<!-- Branding Section -->
+<!-- BRANDING SECTION --------------------------------------------------------->
 <section class="Branding-Section">
   <h1>Branding</h1>
       <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches till I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experiance. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
-   <img class="sketching-of-logo" src="images/SketchingForLogo.png" alt="Sketching for Logo Image"/>
-   <img class="color-info" src="images/Colors.png" alt="Color Image"/>
-   <img class="Mobile-logo-digital" src="images/Logo-Digital-Mobile.png" alt="Logo Digital Image"/>
-
+   <img class="sketching-of-logo" src="images/sketchingforlogo.png" alt="Sketching for Logo Image"/>
+   <img class="color-info" src="images/color.png" alt="Color Image"/>
+   <img class="Mobile-logo-digital" src="images/logossavesafe.png" alt="Logo Digital Image"/>
 </section>
-<!-- Typeface Section -->
+<!-- TYPFACE SECTION ---------------------------------------------------------->
 <section class="Typeface-Section">
   <h1>Typeface</h1>
      <p class="Plantagenet-Cherokee-font-into">I choose Plantagenet Cherokee as one of the options for the brand typeface because it is a serif humanist font. This font is dressy with the feet on all letters, when displayed in a capital display. This font also has uneven lines, witch gives it a feeling of strong and elegant all at the same time.</p>
@@ -177,13 +165,13 @@
      <p class="Ovo-font-info">I paired it with a complementary typeface that plays well with my brand typeface. I chose Ovo as the complementary typeface because it is also a elegant and strong font but with lines that are not so vag. This font is also a serif humanist with the feet also giving it a dressy feeling. </p>
      <p class="Ovo-font">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789</p>
 </section>
-<!-- Prototype Section -->
+<!-- PROTOTYPE SECTOIN -------------------------------------------------------->
 <section class="Prototype">
   <h1>Prototype</h1>
     <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user.I also needed to add a photo group area to this application.</p>
-      <img class="Prototype-image" src="images/PrototypePhoto.jpg" alt="Prototype Photo"/>
+      <img class="Prototype-image" src="images/prototypephoto.jpg" alt="Prototype Photo"/>
 </section>
-<!-- Analysis of Test -->
+<!-- ANALYSIS OF TEST --------------------------------------------------------->
 <section class="Analysis-of-Test-2">
   <h1>Analysis of Test</h1>
     <ul>
@@ -195,35 +183,34 @@
       <li class="test2-three-info">During this test I wrote down some items that I need to look into to make it less confusing for the users. The name in the new link I need to review. The names on the buttons don’t seem to be clear to the users so I would like to look into better names for those buttons. Also the groups for images again. I need to find a good location for those groups to be located for the users.</li>
    </ul>
 </section>
-<!-- Conclusion Section -->
+<!-- CONCLUSION SECTION ------------------------------------------------------->
 <section class="Conclusion">
   <h1>Conclusion</h1>
     <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped me to determine what needed to happen to make this application successful. Testing allowed for quick iteration and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed me to develop a great brand for Save Safe to develop a applocation that not only looks great for the users but works great also. </p>
 </section>
-<!--- LET'S TALK LINK FOOTER SECTION ------------------------------------------->
+<!--- LET'S TALK LINK FOOTER SECTION ------------------------------------------>
   <div class="footer">
     <footer class="lets-talk-links" id="Contact">
       <h1>Let's Talk</h1>
-<!--- EMAIL LINK --------------------------------------------------------------->
+<!--- EMAIL LINK -------------------------------------------------------------->
       <a class="email-link" href="mailto:flynns_shutters@hotmail.com" target="_blank"> flynns_shutters@hotmail.com</a>
       <ul class="footer__link-list">
-<!--- LINKEDIN LINK------------------------------------------------------------->
+<!--- LINKEDIN LINK------------------------------------------------------------>
         <li class="icon">
       <a class="linkedin-link" href="https://www.linkedin.com/in/emily-heyrman-a6504417b" target="_blank">
         <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-<!--- GITHUB LINK -------------------------------------------------------------->
+<!--- GITHUB LINK ------------------------------------------------------------->
       <a class="github-link" href="https://github.com/EmilyHeyrman" target="_blank">
         <i class="fa fa-github-square" aria-hidden="true"></i></a>
-<!--- FACEBOOK LINK ------------------------------------------------------------>
+<!--- FACEBOOK LINK ----------------------------------------------------------->
       <a class="facebook-link" href="https://www.facebook.com/emily.flynn.31?ref=bookmarks" target="_blank">
         <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-      <!--- TWITTER LINK ------------------------------------------------------->
+<!--- TWITTER LINK ------------------------------------------------------------>
        <a class="twittier-link" href="https://twitter.com/HeyrmanEmily" target="_blank">
          <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
       </li>
      </ul>
     </footer>
-   </section>
   </div>
  </body>
 </html>
