--- a/project.html
+++ b/project.html
@@ -6,12 +6,12 @@
 <!--- PAGE HEADER TITLE DISPLAYED--------------------------------------------->
   <title>Emily Heyrman's Journey</title>
 <!--- FONT ----------------------------------------------------------------->
-  <link href='//fonts.googleapis.com/css?family=Montserrat:regular,thin,900'
-    rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=SourceSansPro:regular,thin,900'
-    rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Raleway:regular,thin,900'
-    rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:100,400,900'
+  rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=SourceSansPro:300,400,900'
+  rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:100,400,900'
+  rel='stylesheet' type='text/css'>
 <!-- FONT AWESOME ------------------------------------------------------------->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- CUSTOM STYLE ------------------------------------------------------------->
