--- a/journey.html
+++ b/journey.html
@@ -26,11 +26,12 @@
          <header class="header">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-            <img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"/>
+            <a href="../index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
              <ul class="menu">
-              <li><a href='index.html'>Home</a></li>
-              <li><a href='images/resume'>Resume</a></li>
-              <li><a href='#Contact'>Contact</a></li>
+               <li><a href='journey.html'>About</a></li>
+               <li><a href='project.html'>Work</a></li>
+               <li><a href='images/resume'>Resume</a></li>
+               <li><a href='#Contact'>Contact</a></li>
             </ul>
           </header>
          </div>
