--- a/journey.html
+++ b/journey.html
@@ -15,8 +15,8 @@
 <!--- FONT AWESOME ------------------------------------------------------------>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!--- CUSTOM STYLES ----------------------------------------------------------->
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="Styles/reset.css">
+    <link rel="stylesheet" href="Styles/main.css">
 <!--- BODY START -------------------------------------------------------------->
     <body>
 <!--- GRID CONTAINER----------------------------------------------------------->
