--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!--- CUSTOM STYLES ----------------------------------------------------------->
          <link rel="stylesheet" href="Styles/reset.css">
-         <link rel="stylesheet" href="Styles/main.css">
+         <link rel="stylesheet" href="Styles/Main.css">
 <!--- BODY START -------------------------------------------------------------->
   <body>
 <!--- GRID CONTAINER----------------------------------------------------------->
