--- a/journey.html
+++ b/journey.html
@@ -26,7 +26,7 @@
          <header class="header">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-            <a href="../index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
+            <a href="index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
              <ul class="menu">
                <li><a href='journey.html'>About</a></li>
                <li><a href='project.html'>Work</a></li>
