--- a/journey.html
+++ b/journey.html
@@ -26,7 +26,7 @@
          <header class="header">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-            <a href="index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
+            <a href="index.html"><img class="logo" src="images/emily-heyrman-logo.png" alt="Emily Heyrman Logo"></a>
              <ul class="menu">
                <li><a href='journey.html'>About</a></li>
                <li><a href='project.html'>Work</a></li>
@@ -38,7 +38,7 @@
 <!-- HERO SECTION ------------------------------------------------------------->
     <section class="hero-journey" id=Journey>
       <h1 class="my-journey-h1">My Journey to UX/UI Design</h1>
-        <img class="Journey-Image" src="images/myjourneyimage.jpg" alt=" "/>
+        <img class="Journey-Image" src="images/my-journey-image.jpg" alt=" "/>
     </section>
     <section class="paragraph-journey">
         <p class="p-1"><b class="bold">I always found the joy of drawing, and had the privilege to go to Disney World. </b>I loved going to the artist and design buildings at Disney and watching the artist build and create new artwork. I was watching this one artist draw Mickey Mouse on the main street of the magic kingdom. He looked up at me and asked ” would you like to learn how to draw Mickey Mouse”? With excitement I said “yes”. He let me sit in his art studio and step by step taught me how to draw Mickey Mouse. This moment made me realize I wanted to do something in the world of art, but what. </p>
