--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
           <header class="header">
             <input class="menu-btn" type="checkbox" id="menu-btn"/>
               <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-               <a href="index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
+               <a href="index.html"><img class="logo" src="images/emily-heyrman-logo.png" alt="Emily Heyrman Logo"></a>
                 <ul class="menu">
                   <li><a href='journey.html'>About</a></li>
                   <li><a href='project.html'>Work</a></li>
@@ -40,7 +40,7 @@
       <h1>Save Safe Case Study</h1>
         <h2>Cloud storage app for the everyday saver.</h2>
         <a class="SaveSafe-Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
-      <img class="hero-image" src="images/casestudyherophoto.jpg" alt="Case Study Hero Photo"/>
+      <img class="hero-image" src="images/case-study-hero-photo.jpg" alt="Case Study Hero Photo"/>
     </div>
 <!-- OVERVIEW SECTION --------------------------------------------------------->
   <section class="Overview">
@@ -109,8 +109,8 @@
 <section class="Personas-Section">
   <h1>Personas</h1>
      <p>User Personas showed me about what type of users will want to use this application. It allowed me to see the age difference and goals of each user and how each user may not use the application the same way. </p>
-  <img class="Persona-Image-Section" src="images/personasectionphoto.jpg" alt="Persona Section Photo"/>
-  <img class="joe-persona-images" src="images/personas.jpg" alt="Personas"/>
+  <img class="Persona-Image-Section" src="images/persona-section-photo.jpg" alt="Persona Section Photo"/>
+  <img class="joe-persona-images" src="images/personas-save-safe.jpg" alt="Personas"/>
 </section>
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
@@ -128,7 +128,7 @@
 <section class="Wireframes-Section">
   <h1>Wireframes</h1>
      <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without pudding a lot of effort into the design process of this application. </p>
-     <img class="Wireframe-image" src="images/wireframesimage.jpg" alt="Wireframe Section Image"/>
+     <img class="Wireframe-image" src="images/wireframes-image.jpg" alt="Wireframe Section Image"/>
    <img class="Wireframe-Images" src="images/wireframes.png" alt="Wireframe Drawings"/>
 </section>
 <!-- ANALYSIS OF TEST SECTION ------------------------------------------------->
@@ -147,16 +147,16 @@
 <section class="Mockup-Section">
   <h1>Mockups</h1>
      <p>My First Mockups some of my colors used in the application didn’t  work well together for every user. I tested the new colors against each other to make sure they work well for each user and they did. </p>
-     <img class="Mockup-Image" src="images/mockupsphoto.jpg" alt="Mockup Photo Section"/>
-   <img class="Mockup-Image-Digital" src="images/mockups.jpg" alt="Mockups Photo"/>
+     <img class="Mockup-Image" src="images/mockups-photo.jpg" alt="Mockup Photo Section"/>
+   <img class="Mockup-Image-Digital" src="images/mockups-save-safe.jpg" alt="Mockups Photo"/>
 </section>
 <!-- BRANDING SECTION --------------------------------------------------------->
 <section class="Branding-Section">
   <h1>Branding</h1>
       <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches till I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experiance. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
-   <img class="sketching-of-logo" src="images/sketchingforlogo.png" alt="Sketching for Logo Image"/>
-   <img class="color-info" src="images/color.png" alt="Color Image"/>
-   <img class="Mobile-logo-digital" src="images/logossavesafe.png" alt="Logo Digital Image"/>
+   <img class="sketching-of-logo" src="images/sketching-for-logo.png" alt="Sketching for Logo Image"/>
+   <img class="color-info" src="images/color-case-study.png" alt="Color Image"/>
+   <img class="Mobile-logo-digital" src="images/logos-save-safe.png" alt="Logo Digital Image"/>
 </section>
 <!-- TYPFACE SECTION ---------------------------------------------------------->
 <section class="Typeface-Section">
@@ -170,7 +170,7 @@
 <section class="Prototype">
   <h1>Prototype</h1>
     <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user.I also needed to add a photo group area to this application.</p>
-      <img class="Prototype-image" src="images/prototypephoto.jpg" alt="Prototype Photo"/>
+      <img class="Prototype-image" src="images/prototype-photo.jpg" alt="Prototype Photo"/>
 </section>
 <!-- ANALYSIS OF TEST --------------------------------------------------------->
 <section class="Analysis-of-Test-2">
