--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="header">
     <input class="menu-btn" type="checkbox" id="menu-btn"/>
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-       <a href="index.html"><img class="logo" src="images/logo.png" alt="Emily Heyrman Logo"></a>
+       <a href="index.html"><img class="logo" src="images/emily-heyrman-logo.png" alt="Emily Heyrman Logo"></a>
         <ul class="menu">
           <li><a href='journey.html'>About</a></li>
           <li><a href='project.html'>Work</a></li>
@@ -39,7 +39,7 @@
    <div class="hero">
        <h1>Hello,<br>my name is Emily Heyrman</h1>
         <h2>I'm a UX/UI Designer bassed in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
-          <img class="feathers" src="images/feathers.jpg" alt="Emily Heyrman Logo"/>
+          <img class="feathers" src="images/feathers-homepage.jpg" alt="Emily Heyrman Logo"/>
    </div>
 <!--- MY STORY (JOURNEY) SECTION----------------------------------------------->
         <div class="my-journey" id="Journey">
